--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <!--
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
-  -->
   <title>App1</title>
-  <base href="/">
+  <base href="/"><link rel="stylesheet"
+  href="https://unpkg.com/bootstrap@3.3.7/dist/css/bootstrap.min.css">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
